<resources>
    <string name="app_name">GymLogApplication</string>
    <string name="exercise">exercise</string>
    <string name="Exercise">Exercise</string>
    <string name="enter_an_exercise">Enter an Exercise</string>
    <string name="weight">Weight</string>
    <string name="Enter_a_Weight">Enter a weight</string>
    <string name="reps">Reps</string>
    <string name="enter_reps">Enter Reps</string>
    <string name="log">Log!</string>
    <string name="noting_here_time_to_hit_the_gym">Noting here, time to hit the gym!</string>
    <string name="login_welcome">Welcom to the GymLog. Please Sign in.</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login!</string>
    <string name="preference_file_key">daclinkPreferenceFileNameGymlog</string>
    <string name="preference_userId_key">daclinkPreferenceUserIdkeyGymLog</string>
    <string name="logged_in">LOGGED_IN</string>
</resources>